Add first draft of GemNet section

--- a/content/preliminaries/atomic_simulations.tex
+++ b/content/preliminaries/atomic_simulations.tex
@@ -27,11 +27,12 @@ learning somewhat universal functions, seem very reasonable.
 
 From now on, we define a molecule consisting of $n$ atoms by its atomic numbers 
 $\zz$ and its positions $\XX$, where
-\[
+\begin{equation}
     \XX \: \coloneqq \: \set{\xx_1, \dots, \xx_n}, \; \xx_i \in \R^3
     \qquad \text{and} \qquad 
     \zz \: \coloneqq \: \set{z_1, \dots, z_n}, \; z_i \in \N \text{.}
-\]
+    \label{eq:molecule_setup}
+\end{equation}
 Nonetheless, in many cases there is still some arbitrariness in the choice of the 
 exact positions $\XX$: Energies of molecule structures might be invariant w.r.t. 
 translations and rotations, or forces might be invariant w.r.t. 
