--- a/preamble.tex
+++ b/preamble.tex
@@ -89,6 +89,9 @@
 \newcommand{\ee}{\boldsymbol{e}}
 \newcommand{\ttt}{\boldsymbol{t}}
 \newcommand{\XX}{\boldsymbol{X}}
+\newcommand{\eee}{\boldsymbol{e}}
+\newcommand{\hh}{\boldsymbol{h}}
+\newcommand{\mm}{\boldsymbol{m}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Official TUM colors
