Add proposal for Dimenet section embedding in atomic simulations chapter

--- a/content/preliminaries/atomic_simulations.tex
+++ b/content/preliminaries/atomic_simulations.tex
@@ -14,8 +14,8 @@ with significant drawbacks as they might be extremely expensive from a computati
 standpoint, imposing the necessity to either optimize these conventional methods 
 as far as possible or use completely different approaches.
 
-One alternative approach that is subject to current research is to compute or predict such molecule properties 
-is to use supervised
+One alternative approach that is subject to current research is to compute or 
+predict such molecule properties using supervised
 machine learning in order to learn a function that maps molecule structures to their
 respective properties based on data of known molecules. For this task, Graph
 Neural Networks (GNNs) are very well suited not only because a molecule can naturally
