--- a/content/preliminaries/gnns.tex
+++ b/content/preliminaries/gnns.tex
@@ -142,8 +142,8 @@ attributes, i.e. over multiple such blocks, messages can be passed along the edg
 a graph. Now, a GNN is simply a GN whose blocks use neural networks to implement the
 update functions $\phi_e$, $\phi_v$, $\phi_u$. Note that global graph prediction, 
 node prediction as well as edge prediction can be performed with a GNN as just
-the corresponding attribute of the GNN output graph can be regarded as the final 
-network output.
+the corresponding attribute of the GNN output graph (or some transformation of it) can 
+be regarded as the final network output.
 
 \subsubsection{Extended Graph Networks}
 \label{subsubsec:egns}
