--- a/preamble.tex
+++ b/preamble.tex
@@ -93,6 +93,7 @@
 \newcommand{\eee}{\boldsymbol{e}}
 \newcommand{\hh}{\boldsymbol{h}}
 \newcommand{\mm}{\boldsymbol{m}}
+\newcommand{\aaa}{\boldsymbol{a}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Official TUM colors
