Unify naming conventions between gemnet and dimenet

--- a/content/preliminaries/atomic_simulations/dimenet.tex
+++ b/content/preliminaries/atomic_simulations/dimenet.tex
@@ -14,7 +14,7 @@ Just as in \eqref{eq:molecule_setup}, the network receives the positions $\XX$
 and atomic numbers $\zz$ of a molecule as inputs. 
 At first, define the pairwise distances and relative direction vectors
 \[
-    d_{ij} \: \coloneqq \: \norm{\xx_i - \xx_j}_2, 
+    d_{ij} \: \coloneqq \: \norm{\xx_j - \xx_i}_2, 
     \qquad \vec{\xx}_{ij} \: \coloneqq \xx_j - \xx_i \text{.}
 \]
 A molecular graph is given or it is defined by connecting the atoms with distance 
