Add ZeRO figure

--- a/content/implementation/zero.tex
+++ b/content/implementation/zero.tex
@@ -22,3 +22,5 @@ Stage 2 of ZeRO partitions both optimizer states and gradients.
 
 Stage 3 of ZeRO partitions optimizer states, gradients and model parameters, thus merging the 
 traditional Data Parallelism approach with Model parallelism.
+
+\input{figures/deepspeed/zero.tex}
