--- a/content/preliminaries/atomic_simulations/dimenet.tex
+++ b/content/preliminaries/atomic_simulations/dimenet.tex
@@ -1,4 +1,4 @@
-\subsubsection{Dimenet and Dimenet++}
+\subsubsection{DimeNet and DimeNet++}
 \label{subsubsec:dimenet}
 
 DimeNet (\enquote{Directional Message Passing Neural Network}) 
@@ -39,7 +39,7 @@ $t_{i}^{(1)}$ or a global attribute $t^{(1)} = \sum_{i=1}^n t_i^{(1)}$ are initi
 on the atomic numbers $\zz$ and $\ee_{\text{RBF}}^{(ji)}$. Both node embedings 
 $\hh_i \coloneqq \sum_{j \in \mathcal{N}_i} \mm_{ji}$ and triplet embeddings are handled
 implicitly (i.e. the \textbf{Triplet Update} and \textbf{Node Update} outputs from 
-\ref{subsubsec:gns}, \ref{subsubsec:egns}) do not depend on their respective predecessors).
+\ref{subsubsec:gns}, \ref{subsubsec:egns} do not depend on their respective predecessors).
 From now on, this will be denoted by \enquote{$\_$}.
 
 In the EGN language, the initial graph is defined as follows:
