--- a/preamble.tex
+++ b/preamble.tex
@@ -34,6 +34,7 @@
 \usepackage{wrapfig}
 
 \usetikzlibrary{shapes,snakes}
+\usetikzlibrary{patterns}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -111,5 +112,8 @@
 % Emphasis
 \definecolor{tum-orange}{RGB}{227,114,34}
 \definecolor{tum-light-orange}{RGB}{252, 214, 184}
-\definecolor{tum-green}{RGB}{162,173,0}
+\definecolor{tum-light-green}{RGB}{194, 240, 224}
+\definecolor{tum-green}{RGB}{112, 194, 165}
+\definecolor{tum-dark-green}{RGB}{30, 123, 90}
 \definecolor{tum-light-gray}{RGB}{218,215,203}
+\definecolor{tum-lighter-gray}{RGB}{244, 244, 240}
